--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,18 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   flutter:
     sdk: flutter
   get: 4.6.5
   google_fonts: ^3.0.1
+  json_annotation: ^4.6.0
+  json_serializable: ^6.3.1
+  lottie: ^1.4.2
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
+  build_runner: ^2.2.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -20,3 +26,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/lottie/
+  fonts:
+    - family: Logos
+      fonts:
+        - asset: "assets/icons/Logos.ttf"
